<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.auth.register.RegisterFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_registerNickName"
            android:hint="@string/hint_login_nickname"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/edt_input_default" />

        <EditText
            android:id="@+id/edt_registerName"
            android:hint="Nome"
            android:layout_marginTop="16dp"
            style="@style/edt_input_default"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintTop_toBottomOf="@id/edt_registerNickName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edt_registerEmail"
            style="@style/edt_input_default"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_login_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.676"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_registerName" />

        <EditText
            android:id="@+id/edt_registerPassword"
            style="@style/edt_input_default"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.676"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_registerEmail" />

    </LinearLayout>

</ScrollView>