<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.auth.login.LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_registerNickName"
        android:hint="@string/hint_login_email"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        style="@style/edt_input_default" />

    <EditText
        android:id="@+id/edt_registerName"
        android:hint="@string/hint_login_password"
        android:layout_marginTop="16dp"
        style="@style/edt_input_default"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/edt_registerNickName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_dontHaveAccount"
        android:text="user register"
        app:layout_constraintEnd_toEndOf="@+id/edt_registerName"
        app:layout_constraintHorizontal_bias="0.444"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/edt_registerName"
        app:layout_constraintTop_toBottomOf="@+id/edt_registerName"
        style="@style/tv_default" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_loginEnter"
        style="@style/button_default"
        android:text="@string/title_button_login_enter"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>