<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background">

        <ImageView
            android:id="@+id/imageview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_wintrophy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <TextView
            android:id="@+id/textview1_sheet"
            android:layout_width="wrap_content"
            android:layout_height="106dp"
            android:textSize="40sp"
            android:textColor="@color/label_yellow"
            android:textAlignment="center"
            style="@style/tv_default"
            android:text="@string/congratulations_winner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview1">
        </TextView>

        <TextView
            android:id="@+id/textview2_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/score_green"
            android:textAlignment="center"
            android:text="+420"
            style="@style/tv_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview1_sheet">
        </TextView>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview2_sheet">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/white"
                style="@style/tv_default"
                android:text="@string/current_score">
            </TextView>

            <TextView
                android:id="@+id/current_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/score_green"
                style="@style/tv_default"
                android:text="@string/score_current_actualscore">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/white"
                style="@style/tv_default"
                android:textAlignment="center"
                android:text="@string/current_rating">
            </TextView>

            <TextView
                android:id="@+id/winner_classification_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/score_green"
                style="@style/tv_default"
                android:text="@string/score_classification_current">
            </TextView>
        </LinearLayout>

        <ImageView
            android:id="@id/btn_play_rematch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_akar_icons_double_sword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout2">
        </ImageView>

        <TextView
            android:id="@+id/textview_rematch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/tv_default"
            android:textColor="@color/light_orange"
            android:textSize="30sp"
            android:text="REVANCHE"
            app:layout_constraintTop_toBottomOf="@+id/btn_play_rematch">
        </TextView>

        <ImageView
            android:id="@+id/btn_play_quiz_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_rematch"
            android:src="@drawable/ic_repeat_game">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            style="@style/tv_default"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_play_quiz_again"
            android:text="@string/text_play_again">
        </TextView>

        <ImageView
            android:id="@+id/btn_home_quiz"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_rematch"
            android:src="@drawable/ic_iconoir_home">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            style="@style/tv_default"
            android:layout_marginEnd="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_home_quiz"
            android:text="@string/text_main_menu">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>